k8s-dev/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: consumer
  template:
    metadata:
      labels:
        component: consumer
    spec:
      containers:
        - name: consumer
          image: itsdevin/bow-mark-server
          command: ["npm", "run", "start:consumer-dev"]
          ports:
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /
              port: 9090
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 24
