k8s-dev/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: itsdevin/bow-mark-server
          command: ["npm", "run", "start:dev"]
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "500m"
              memory: "1000Mi"
            limits:
              cpu: "1000m"
              memory: "2000Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 24
